# TextSender

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/szsszwl/textsender/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Cipher.cpp  Cipher.h
app/src/main/java/com/szsszwl/textsender/: MainActivity.java  MyApplication.java
app/src/main/java/com/szsszwl/textsender/adapter/: TextItemAdapter.java
app/src/main/java/com/szsszwl/textsender/bean/: Chat.java
app/src/main/java/com/szsszwl/textsender/ui/receive/: ReceiveFragment.java
app/src/main/java/com/szsszwl/textsender/ui/send/: SendFragment.java
app/src/main/res/color/: home_btn_color.xml
app/src/main/res/drawable/: chat_item_bg.xml  ic_chat.xml
app/src/main/res/layout/: activity_main.xml  fragment_receiver.xml  fragment_sender.xml  text_list_item.xml
app/src/main/res/layout-v23/: text_list_item.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/szsszwl/textsender/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
